2008-10-27  Dan Williams  <dcbw@redhat.com>

	Patch from Tambet Ingo <tambet@gmail.com>

	* src/applet-device-cdma.c
	  src/applet-device-gsm.c
	  src/applet-device-wifi.c
	  src/applet-device-wired.c
	  src/applet.c
	  src/gconf-helpers/gconf-helpers.c
		- Use setting accessors

2008-10-27  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/nm-connection-editor.c
		- Don't allow editing of read-only connections

	* src/gconf-helpers/gconf-helpers.c
		- Don't read or save the connection setting's 'read-only' value to GConf

2008-10-27  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/nm-connection-editor.c
		- Revert unintended checkin for read-only connections that snuck into
			the previous commit

2008-10-26  Dan Williams  <dcbw@redhat.com>

	Patch from Jaap A. Haitsma <jaap@haitsma.org>

	* src/connection-editor/nm-connection-editor.c
	  src/connection-editor/nm-connection-list.c
		- Make default window icons actually work (bgo #553170)

2008-10-26  Dan Williams  <dcbw@redhat.com>

	Patch from Tambet Ingo <tambet@gmail.com>

	* src/applet-device-cdma.c
	  src/applet-device-gsm.c
	  src/applet-device-wifi.c
	  src/applet-device-wired.c
	  src/applet-dialogs.c
	  src/applet.c
	  src/connection-editor/nm-connection-editor.c
	  src/connection-editor/nm-connection-list.c
	  src/connection-editor/page-ip4.c
	  src/connection-editor/vpn-helpers.c
	  src/gconf-helpers/gconf-helpers.c
	  src/gconf-helpers/gconf-upgrade.c
	  src/gconf-helpers/nma-gconf-connection.c
	  src/utils/utils.c
	  src/vpn-password-dialog.c
	  src/wired-dialog.c
	  src/wireless-dialog.c
	  src/wireless-security/wireless-security.c
		- Update connection setting accessors

2008-10-26  Dan Williams  <dcbw@redhat.com>

	Patch from Tambet Ingo <tambet@gmail.com>

	* src/applet-device-gsm.c
	  src/connection-editor/nm-connection-list.c
	  src/connection-editor/page-mobile.c
		- Use gsm setting accessors

2008-10-26  Dan Williams  <dcbw@redhat.com>
