@@ -2,6 +2,13 @@
 
 	Patch from Tambet Ingo <tambet@gmail.com>
 
+	* src/connection-editor/page-ppp.c
+		- Use ppp setting accessors
+
+2008-10-27  Dan Williams  <dcbw@redhat.com>
+
+	Patch from Tambet Ingo <tambet@gmail.com>
+
 	* src/applet-device-cdma.c
 	  src/applet-device-gsm.c
 	  src/applet-device-wifi.c
